--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-autopep8==1.5.5
+autopep8==1.5.6
 bcrypt==3.2.0
 blinker==1.4
 boto3==1.17.33
@@ -6,31 +6,35 @@ botocore==1.20.33
 certifi==2020.12.5
 cffi==1.14.3
 chardet==4.0.0
-Click==7.0
+click==7.1.2
 dnspython==2.1.0
 email-validator==1.1.2
-Flask==1.0.2
+Flask==1.1.2
 Flask-Admin==1.5.7
 Flask-Bcrypt==0.7.1
+Flask-Cors==3.0.10
 Flask-DebugToolbar==0.10.1
 Flask-JWT-Extended==4.1.0
 Flask-Mail==0.9.1
-Flask-SQLAlchemy==2.4.4
-Flask-WTF==0.14.2
+Flask-SQLAlchemy==2.5.1
+Flask-WTF==0.14.3
+git-filter-repo==2.29.0
+greenlet==1.0.0
 gunicorn==20.1.0
 idna==2.10
+importlib-metadata==3.7.3
 ipython==7.18.1
 ipython-genutils==0.2.0
 is-disposable-email==1.0.0
-itsdangerous==0.24
-Jinja2==2.10
+itsdangerous==1.1.0
+Jinja2==2.11.3
 jmespath==0.10.0
 MarkupSafe==1.1.1
 mccabe==0.6.1
 pickleshare==0.7.5
-Pillow==8.1.0
+Pillow==8.2.0
 psycopg2-binary==2.8.6
-pycodestyle==2.6.0
+pycodestyle==2.7.0
 pycparser==2.20
 PyJWT==2.0.1
 python-dateutil==2.8.1
@@ -38,12 +42,13 @@ python-dotenv==0.16.0
 requests==2.25.1
 s3transfer==0.3.6
 simplejson==3.17.2
-six==1.11.0
+six==1.15.0
 SQLAlchemy==1.3.23
 toml==0.10.2
 typing-extensions==3.7.4.3
-urllib3==1.26.3
-Werkzeug==0.16.0
+urllib3==1.26.4
+Werkzeug==1.0.1
 wrapt==1.12.1
-WTForms==2.2.1
+WTForms==2.3.3
 wtforms-validators==1.0.0
+zipp==3.4.1
