--- a/requirements.txt
+++ b/requirements.txt
@@ -33,6 +33,7 @@ MarkupSafe==1.1.1
 mccabe==0.6.1
 pickleshare==0.7.5
 Pillow==8.2.0
+psycopg2==2.8.6
 psycopg2-binary==2.8.6
 pycodestyle==2.7.0
 pycparser==2.20
